--- a/HW2/src/styles/main.scss
+++ b/HW2/src/styles/main.scss
@@ -11,8 +11,26 @@ html {
 }
 
 body{
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
+}
+
+#pitch_list span{
+    display: block;
+    float: left;
+    height: 15px;
+    width: 15px;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 3px;
+    border: 1px solid #999;
+}
+#pitch_list {
+    list-style: none;
+}
+
+#pitch_list li{
+    list-style: none;
 }
 
 .home{
@@ -39,3 +57,11 @@ body{
   height: 100%;
   width: 100%;
 }
+
+#legend{
+  position: absolute;
+  z-index: 1;
+  text-align: center;
+}
+
+
