--- a/HW2/src/styles/main.scss
+++ b/HW2/src/styles/main.scss
@@ -16,7 +16,12 @@ body{
 }
 
 info{
-    text-align: center
+    height: 10%;
+    width: 100%;
+    font-size: 2vh;
+    text-align: center;
+    vertical-align: baseline;
+    display: inline-block;
 }
 
 
@@ -54,21 +59,27 @@ info{
 }
 
 #scene{
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
 #chart{
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
 #chart2{
-  height: 100%;
+  height: 90%;
   width: 100%;
 }
 
 #legend{
+  position: absolute;
+  z-index: 1;
+  text-align: center;
+}
+
+#legend2{
   position: absolute;
   z-index: 1;
   text-align: center;
